tests/neg/semantic_addr_of_non_lvalue.baa
// EXPECT: أخذ العنوان '&' يتطلب قيمة قابلة للإسناد

صحيح الرئيسية() {
    صحيح* م = &(١ + ٢).
    إرجع ٠.
}
